--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -9,3 +9,5 @@ update-changelog = true
 # md5-dict cache format (see bug #409445).
 # NOTE: list md5-dict first so clients prefer it
 cache-formats = md5-dict pms
+
+masters = gentoo
